# functionallist

./: .gitignore  Dockerfile  docker-compose.yaml  eslint.config.js  index.html  interface.proto  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
app/: App.svelte  FunctionalListView.svelte  api.ts  auth.ts  interface.ts  vite-env.d.ts
server/: __main__.py  app.py  auth.py  database.py  logging.py  model.py  settings.py
server/schema/: env.py  script.py.mako
server/schema/versions/: 69d6a2dd8407_initial_schema.py
