[project]
name = "functionallist"
version = "0.1.1"
authors = [{ name = "David Bourgault", email = "dav.bour@gmail.com" }]
requires-python = ">=3.14.0"
dependencies = [
    "alembic~=1.18",
    "fastapi~=0.133",
    "httpx~=0.28",
    "hypercorn~=0.18",
    "protobuf~=6.33",
    "psycopg[binary]~=3.3",
    "pydantic~=2.12",
    "pydantic-settings~=2.13",
    "pyjwt[crypto]~=2.11",
    "sqlalchemy>=2.0.47",
    "sqlmodel~=0.0",
    "starlette>=0.52.1",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.133.1",
    "fawltydeps>=0.20.0",
    "mypy-protobuf>=5.0.0",
    "pyright>=1.1.408",
    "ruff>=0.15.10",
]

[tool.alembic]
script_location = "%(here)s/server/schema"
prepend_sys_path = "."

[tool.ruff]
line-length = 120

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",
    "**/.git",
    "**/build",
    "**/.*",
    "**/dist",
    "**/*_pb2.py",
    "**/*_pb2.pyi",
]
reportIncompatibleVariableOverride = false

[tool.fawltydeps]
ignore_unused = [
    "psycopg",
    "ruff",
    "pyright",
    "fawltydeps",
    "mypy-protobuf"
]